zaakafhandelcomponent-895 - Gerelateerde zaken tab op zaken view